--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-14 16:44:37
+lastsearch = 2024-07-14 17:38:02
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -37,9 +37,9 @@ title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
 url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
 
 [www.impehcm.org.vn]
-match = -71.4%%
-title = Giun đầu gai (Phần 1: Đại cương; Dịch tễ học; Đặc điểm hình ...
-url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/giun-dau-gai-phan-1-dai-cuong-dich-te-hoc-dac-diem-hinh-thai-hoc-va-chu-ky-phat-trien.html
+match = -17.9%%
+title = Bệnh sán dây bò (Taenia saginata) - Viện Sốt rét
+url = http://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/benh-san-day-bo-taenia-saginata.html
 
 [www.thuocbietduoc.com.vn]
 match = -50.0%%
@@ -122,9 +122,9 @@ title = Clarithromycin - Bệnh viện Đại học Y Dược TPHCM
 url = https://bvdaihoccoso2.com.vn/vi/thong-tin-thuoc/clarithromycin.html
 
 [www.instagram.com]
-match = -177.8%%
-title = Instagram
-url = https://www.instagram.com/bacsicamthuy/reel/C8LgIVNvXTT/
+match = -21.4%%
+title = I love the monstera leaves at twightlight
+url = https://www.instagram.com/jungleful/p/C78JKk_xoRE/
 
 [tamanhhospital.vn]
 match = -50.0%%
