--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-14 15:34:42
+lastsearch = 2024-07-14 17:38:45
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -22,9 +22,9 @@ title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.yellowpages.vn]
-match = -3.6%%
-title = chiếu nhựa, chiếu cói, chiếu tre, chiếu trúc ở tại
-url = https://www.yellowpages.vn/class/490435/chiếu-nhựa,-chiếu-cói,-chiếu-tre,-chiếu-trúc-ở_.html
+match = 0.0%%
+title = danh sách Chiếu Nhựa
+url = https://www.yellowpages.vn/tgcls/10490435/Chiếu-Nhựa.html?j=0
 
 [www.dienmayxanh.com]
 match = -35.7%%
@@ -37,9 +37,9 @@ title = LỊCH HỘI CHỢ VÀ TRIỂN LÃM THƯƠNG MẠI TẠI HÀ NỘI ...
 url = https://tradepro.vn/vi/hoi-cho-trien-lam/ha-noi
 
 [www.sendo.vn]
-match = -28.6%%
-title = Giá sỉ Chiếu nhựa hàng Việt Nam đầy đủ kích thước, giao ...
-url = https://www.sendo.vn/gia-si-chieu-nhua-hang-viet-nam-day-du-kich-thuoc-giao-mau-ngau-nhien-114506005.html
+match = 28.6%%
+title = Chiếu nhựa gấp gọn hàng việt nam - hj10
+url = https://www.sendo.vn/chieu-nhua-gap-gon-hang-viet-nam-46738502.html
 
 [mia.vn]
 match = -39.3%%
