--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-14 15:48:20
+lastsearch = 2024-07-14 17:38:25
 
 [www.lazada.vn]
-match = -27.8%%
-title = Nệm Cao Su Mỏng Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/nem-cao-su-mong/
+match = -94.4%%
+title = Nệm Siêu Nhẹ Giá Tốt T03/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/nem-sieu-nhe/
 
 [m.facebook.com]
 match = -100.0%%
