--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-14 20:14:50
+lastsearch = 2024-07-14 21:21:52
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = 10.0%%
-title = Joan Hilton, DSc, MPH
-url = https://profiles.ucsf.edu/joan.hilton
+match = -80.0%%
+title = Matthew Cooperberg, MD, MPH - UCSF Profiles
+url = https://profiles.ucsf.edu/matthew.cooperberg
 
 [cityofclovis.com]
 match = -65.0%%
@@ -187,9 +187,9 @@ title = Flight Number - Airborne Sensor Facility - NASA
 url = https://asapdata.arc.nasa.gov/sensors/fsrs/94152_fsr.pdf
 
 [profiles.ucsd.edu]
-match = -41.7%%
-title = Jack Gilbert
-url = https://profiles.ucsd.edu/jack.gilbert
+match = -15.0%%
+title = Terry Jernigan - UCSD Profiles
+url = https://profiles.ucsd.edu/terry.jernigan
 
 [profiles.ucdavis.edu]
 match = 0.0%%
@@ -212,9 +212,9 @@ title = Norwalk Citywide Plan: 2019–2029
 url = https://tomorrow.norwalkct.org/wp-content/uploads/2019/02/Complete-POCD-Draft.pdf
 
 [profiles.stanford.edu]
-match = -35.0%%
-title = Fei-Fei Li - Stanford Profiles
-url = https://profiles.stanford.edu/fei-fei-li?tab=publications
+match = -55.0%%
+title = Peter H. Hwang, MD - Stanford Profiles
+url = https://profiles.stanford.edu/peter-hwang
 
 [profiles.sc-ctsi.org]
 match = -80.0%%
