--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-14 15:43:12
+lastsearch = 2024-07-14 22:24:34
 
 [www.diepxuan.com]
 match = -125.0%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -75.0%%
-title = As Warm As Fire Final Episode Ending
-url = https://www.tiktok.com/discover/as-warm-as-fire-final-episode-ending
+match = -200.0%%
+title = Reveal time #beautytok #xyzba #hudabeauty #lip @Huda ...
+url = https://www.tiktok.com/@hudabeauty/video/7343308327729761582
 
 [archiveofourown.org]
 match = -137.5%%
