--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-07-14 17:21:05
+lastsearch = 2024-07-14 22:58:31
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = bộ ga chun poly giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=bộ ga chun poly
 
 [chandem.com.vn]
-match = 17.9%%
-title = Bộ chăn ga gối Happy Wedding Solid 84
-url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-solid-84/
+match = 21.4%%
+title = Bộ chăn ga gối Litter Girl Ctt112
+url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-ctt112/
 
 [demxanh.com]
 match = 0.0%%
@@ -62,9 +62,9 @@ title = Bộ chăn ga Everon SR-16
 url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
 
 [tiki.vn]
-match = -28.6%%
-title = Chăn ga gối hàng chính hãng, giao nhanh - Tháng 6, 2024
-url = https://tiki.vn/search?q=chăn ga gối
+match = -35.7%%
+title = Ga bọc đệm hàng chính hãng, giao nhanh - Tháng 7, 2024
+url = https://tiki.vn/search?q=ga bọc đệm
 
 [changagoidemsonghong.com]
 match = 0.0%%
