--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-07-14 20:54:38
+lastsearch = 2024-07-15 00:19:10
 
 [shopee.vn]
-match = -78.3%%
-title = Chiếu trúc cao bằng - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/trúc/cao bằng
+match = 34.8%%
+title = CHIẾU TRÚC THANH CAO BẰNG 1M4X1M95
+url = https://shopee.vn/CHIẾU-TRÚC-THANH-CAO-BẰNG-1M4X1M95-i.231768286.18532306098
 
 [www.diepxuan.com]
 match = 26.1%%
@@ -33,8 +33,8 @@ url = https://m.facebook.com/497069713692846/videos/1865016670231470/?__so__=wat
 
 [chieutrucsaigon.com]
 match = -17.4%%
-title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
+title = CHIẾU TRÚC CAO BẰNG 1M GIÁ RẺ LOẠI 1 TẠI TPHCM
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-cao-bang-1m-gia-re-tai-tphcm-69.html
 
 [demxanh.com]
 match = -21.7%%
