--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-14 20:48:29
+lastsearch = 2024-07-15 00:21:10
 
 [shopee.vn]
 match = -8.0%%
@@ -27,9 +27,9 @@ title = Ăn chơi Đài Loan 台灣 - 去哪吃啥?
 url = https://www.facebook.com/groups/anchoidailoan/
 
 [vi.wikipedia.org]
-match = 12.5%%
-title = Lịch sử Đài Loan
-url = https://vi.wikipedia.org/wiki/Lịch_sử_Đài_Loan
+match = -4.0%%
+title = Đài Loan – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Đài_Loan
 
 [www.voatiengviet.com]
 match = -72.0%%
@@ -117,9 +117,9 @@ title = Đài Loan cảnh giác với 'làn sóng' thử tên lửa tại miền
 url = https://trithucvn.co/the-gioi/dai-loan-canh-giac-voi-lan-song-thu-ten-lua-tai-mien-bac-trung-quoc.html
 
 [www.klook.com]
-match = -56.0%%
-title = 35 Địa Điểm Du Lịch Đài Loan Nổi Tiếng Cho Bạn Khám Phá
-url = https://www.klook.com/vi/blog/dia-diem-du-lich-dai-loan/
+match = -12.0%%
+title = 15 Món Đặc Sản Đài Loan Nhất Định Phải Thử
+url = https://www.klook.com/vi/blog/dac-san-dai-loan/
 
 [www.dkn.tv]
 match = -76.0%%
@@ -188,8 +188,8 @@ url = https://www.instagram.com/toiodailoan/p/C7Dmp74AkwU/
 
 [www.skyscanner.com.vn]
 match = -48.0%%
-title = Vé máy bay giá rẻ từ Hoa Kỳ đến Đài Loan - Skyscanner
-url = https://www.skyscanner.com.vn/routes/us/tw/hoa-ky-to-đai-loan.html
+title = Vé máy bay giá rẻ từ Taipei Taiwan Taoyuan đến Hà Nội
+url = https://www.skyscanner.com.vn/routes/tpe/han/taipei-taiwan-taoyuan-to-ha-noi.html
 
 [tamloppoly.vn]
 match = -20.0%%
