--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-14 20:19:31
+lastsearch = 2024-07-15 00:19:44
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -42,14 +42,14 @@ title = KẾT QUẢ CHỌN TẠO GIỐNG LẠC CHỊU MẶN LDH.09 ...
 url = https://asisov.org.vn/cay-thuc-pham/ket-qua-chon-tao-giong-lac-chiu-man-ldh-09-cho-vung-duyen-hai-nam-trung-bo-400.html
 
 [shopee.vn]
-match = -212.5%%
-title = Đồ chơi treo nôi cũi cho bé sơ sinh phát nhạc tự xoay, có ...
-url = https://shopee.vn/Đồ-chơi-treo-nôi-cũi-cho-bé-sơ-sinh-phát-nhạc-tự-xoay-có-đèn-chiếu-hình-lục-lạc-gặm-nướu-điều-khiển-từ-xa-đa-năng-i.256186540.22038728340
+match = -18.8%%
+title = Chiếu lác thiên nhiên : 1m6 .1m8
+url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.thegioididong.com]
-match = -206.2%%
-title = Top 13 game ít dung lượng trên mobile cực hay để trải ...
-url = https://www.thegioididong.com/game-app/top-game-it-dung-luong-tren-mobile-cuc-hay-de-trai-nghiem-1358044
+match = -193.8%%
+title = Samsung Galaxy A14 4GB - Chính hãng, giá tốt, có trả góp
+url = https://www.thegioididong.com/dtdd/samsung-galaxy-a14-4gb
 
 [saigontourist.edu.vn]
 match = -100.0%%
@@ -355,4 +355,9 @@ url = https://www.reddit.com/r/TroChuyenLinhTinh/
 match = -137.5%%
 title = Top gimbal cho iPhone 14 Pro Max và iPhone 14 Pro
 url = https://tokyocamera.vn/gimbal-cho-iphone-14-pro-max/
+
+[merperledalat.vn]
+match = -200.0%%
+title = “Du lịch cùng con” 14 khu vui chơi cho trẻ em tại Đà Lạt
+url = https://merperledalat.vn/tin-tuc/bai-viet/du-lich-cung-con-14-khu-vui-choi-cho-tre-em-tai-da-lat/
 
