--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-14 20:53:54
+lastsearch = 2024-07-15 00:24:39
 
 [shopee.vn]
 match = 25.0%%
@@ -97,9 +97,9 @@ title = Hệ thống kinh lạc trong cơ thể
 url = https://www.vinmec.com/vi/y-hoc-co-truyen/suc-khoe-thuong-thuc/he-thong-kinh-lac-trong-co/
 
 [books.google.com]
-match = -218.8%%
-title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
-url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+12&source=bl&ots=LZu5ZVdzTj&sig=ACfU3U2U61W7ti-IwLGsZeRf9Lg5X6DbNw&hl=en&sa=X&ved=2ahUKEwjM4eWL16aHAxXwJEQIHfsLAh4Q6AF6BAgjEAM
+match = -231.2%%
+title = 12 Con Giáp Theo Lịch Vạn Niên - Page 182 - Google Books Result
+url = https://books.google.com/books?id=uEr8EAAAQBAJ&pg=PA182&lpg=PA182&dq=chieu+lac+soc+12&source=bl&ots=83szfmS_Yw&sig=ACfU3U3rKYsBzcwtqT7H5n2V48sCKULapQ&hl=en&sa=X&ved=2ahUKEwjx2KGZhqeHAxWxCTQIHdhnD1wQ6AF6BAglEAM
 
 [baovinhlong.vn]
 match = -137.5%%
