--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-14 23:48:07
+lastsearch = 2024-07-15 00:22:17
 
 [www.tiktok.com]
 match = -217.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -123.5%%
-title = The army list - Page 463 - Google Books Result
-url = https://books.google.com/books?id=YvANAAAAQAAJ&pg=RA1-PA463&lpg=RA1-PA463&dq=man+in+hoa+dep+16&source=bl&ots=KC67ssMTSL&sig=ACfU3U1ihPnMBkJ2qj4FN_stESArkb3eMA&hl=en&sa=X&ved=2ahUKEwiYqqiE_qaHAxXfElkFHZZhArEQ6AF6BAgVEAM
+match = -217.6%%
+title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
+url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2illXBz20M&sig=ACfU3U2qV6nu0LB3R3IAlH2u-x5QBS1kPA&hl=en&sa=X&ved=2ahUKEwj-8OPVhaeHAxWnFjQIHfDHB4QQ6AF6BAgbEAM
 
 [tax.vermont.gov]
 match = -29.4%%
