--- a/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.h
 lastopen = 2024-07-01 00:11:36
 
 [search]
-lastsearch = 2024-07-14 23:55:03
+lastsearch = 2024-07-15 00:23:54
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -27,19 +27,19 @@ title = Nệm lò xo Kingkoil Cloud Firm
 url = https://nemragoi.com/nem-lo-xo-kingkoil-cloud-firm.html
 
 [everon.online]
-match = 38.3%%
-title = Bảng Giá Đệm Lò Xo Everon King Koil Chính Hãng Giảm ...
-url = https://everon.online/blogs/news/bang-gia-dem-lo-xo-everon-king-koil-chinh-hang-giam-gia-tot-nhat
+match = 31.9%%
+title = Đệm Lò Xo King Koil - Bảng Giá Các Sản Phẩm ...
+url = https://everon.online/collections/dem-lo-xo-king-koil
 
 [www.diepxuan.com]
-match = 36.2%%
-title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
-url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
+match = 57.4%%
+title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27
+url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
 
 [www.everonqb.com]
-match = 53.2%%
-title = Everon Quảng Bình Nệm lò xo Everon Kingkoil 180x200x27 CLOUD ...
-url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.html
+match = 40.0%%
+title = Nệm lò xo Everon Bonnell 200x220x23
+url = https://www.everonqb.com/nem-lo-xo-everon-bonnell-200x220x23.html
 
 [everonvn.com.vn]
 match = 25.6%%
