--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-14 21:54:12
+lastsearch = 2024-07-15 00:21:24
 
 [www.lazada.vn]
 match = -88.9%%
@@ -47,9 +47,9 @@ title = Nem Nướng Theo Cách Này Dù Không Dùng Mỡ Mà Vẫn Béo ...
 url = https://www.youtube.com/watch?v=aVTZUMebQ4M
 
 [www.kymdan.com]
-match = -16.7%%
-title = Nệm (mattress) Kymdan Deluxe
-url = https://www.kymdan.com/san-pham/nem-kymdan-deluxe
+match = -5.6%%
+title = bảng giá sản phẩm kymdan
+url = https://www.kymdan.com/bai-viet/bang-gia-san-pham-kymdan
 
 [www.instagram.com]
 match = -105.6%%
