--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-07-14 18:50:30
+lastsearch = 2024-07-15 00:26:18
 
 [bilystore.vn]
 match = -95.2%%
@@ -12,9 +12,9 @@ title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
 url = https://bilystore.vn/tham-trai-san-phong-ngu/
 
 [shopee.vn]
-match = -95.2%%
-title = ( Hàng mới) Thảm giường tuyết Nhung dày dặn, mềm mịn ...
-url = https://shopee.vn/(-Hàng-mới)-Thảm-giường-tuyết-Nhung-dày-dặn-mềm-mịn-và-rất-ấm-nhiều-Kích-thước(-VIDEO-KÈM-ẢNH-THẬT)-i.3551312.7960781264
+match = -52.4%%
+title = thảm trải giường giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải giường
 
 [tiki.vn]
 match = -38.1%%
