--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-14 21:55:16
+lastsearch = 2024-07-15 00:24:50
 
 [www.tui.co.uk]
-match = -153.3%%
-title = Cruise Calendar 2024 / 2025 | Marella Cruises
-url = https://www.tui.co.uk/cruise/cruise-calendar/
+match = -20.0%%
+title = Inflight Entertainment
+url = https://www.tui.co.uk/info/inflight-entertainment
 
 [www.travelgossip.co.uk]
 match = -126.7%%
@@ -17,9 +17,9 @@ title = TUI's new Birmingham-Singapore flight takes off
 url = https://www.travelgossip.co.uk/latestnews/tuis-birmingham-singapore-flight-takes-off/
 
 [www.flightaware.com]
-match = -213.3%%
-title = BY165 (TOM165) TUI Airways Flight Tracking and History ...
-url = https://www.flightaware.com/live/flight/TOM165/history/20240315/0520Z/WSSS/EGCC
+match = -60.0%%
+title = Live TUI Airways Flight Status
+url = https://www.flightaware.com/live/fleet/TOM
 
 [www.cruisetimetables.com]
 match = -20.0%%
@@ -87,9 +87,9 @@ title = Asia Cruise with Mein Schiff 6 on 12/02/2025
 url = https://www.seascanner.com/cruise-k235506-asia-mein-schiff-6-singapore
 
 [www.cruisemapper.com]
-match = -220.0%%
-title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026 | ...
-url = https://www.cruisemapper.com/cruise-lines/TUI-Cruises-32
+match = -240.0%%
+title = Marella Discovery 2 Itinerary, Current Position, Ship Review
+url = https://www.cruisemapper.com/ships/Marella-Discovery-2-651
 
 [www.mybaggage.com]
 match = -73.3%%
